Kommentare in Marginalien verschoben

--- a/artikel/02.tex
+++ b/artikel/02.tex
@@ -2,8 +2,7 @@
 \chapter{Sachlicher Anwendungsbereich}
 \label{ch:2}
 
-\addsec{Text der Verordnung}
-
+\begin{commentblock}
 \begin{enumerate}
 
   \item Diese Verordnung gilt für die ganz oder teilweise automatisierte \hyperref[itm:04-2]{Verarbeitung} \hyperref
@@ -21,7 +20,10 @@
     \item im Rahmen einer Tätigkeit, die nicht in den Anwendungsbereich des Unionsrechts fällt,%
     \label{itm:02-2a}
 
-    \item durch die Mitgliedstaaten im Rahmen von Tätigkeiten, die in den Anwendungsbereich von Titel V Kapitel 2 EUV
+    \item 
+      \comment{Titel V Kapitel 2 EUV \cite{euv} bezieht sich auf die gemeinsame Außen- und
+      Sicherheitspolitik der EU"=Mitgliedsstaaten.}%
+     durch die Mitgliedstaaten im Rahmen von Tätigkeiten, die in den Anwendungsbereich von Titel V Kapitel 2 EUV
      fallen,%
     \label{itm:02-2b}
 
@@ -35,39 +37,27 @@
 
   \end{enumerate}
 
-  \item Für die \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten} durch die Organe,
-   Einrichtungen, Ämter und Agenturen der Union gilt die Verordnung (EG) Nr. 45/2001. Die Verordnung (EG) Nr. 45/2001
-   und sonstige Rechtsakte der Union, die diese \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]
-   {personenbezogener Daten} regeln, werden im Einklang mit \hyperref[ch:98]{Artikel 98} an die Grundsätze und
-   Vorschriften der vorliegenden Verordnung angepasst.%
+  \item 
+    \comment{Die Verordnung (EG) Nr. 45/2001 \cite{vo-ds-fdv} hat den Schutz natürlicher Personen bei der Verarbeitung
+     personenbezogener Daten durch die Organe und Einrichtungen der Gemeinschaft und den freien Datenverkehr zum
+     Inhalt.}%
+   Für die \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten} durch die Organe,
+   Einrichtungen, Ämter und Agenturen der Union gilt die Verordnung (EG) Nr. 45/2001. 
+   Die Verordnung (EG) Nr. 45/2001 und sonstige Rechtsakte der Union, die diese \hyperref[itm:04-2]
+   {Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten} regeln, werden im Einklang mit \hyperref[ch:98]
+   {Artikel 98} an die Grundsätze und Vorschriften der vorliegenden Verordnung angepasst.%
   \label{itm:02-3}
 
-  \item Die vorliegende Verordnung lässt die Anwendung der Richtlinie 2000/31/EG und speziell die Vorschriften der
+  \item 
+    \comment{Die Richtlinie 2000/31/EG \cite{ril-egv} regelt bestimmte rechtliche Aspekte der Dienste der
+     Informationsgesellschaft, insbesondere des elektronischen Geschäftsverkehrs, im Binnenmarkt. Die referenzierten
+     Artikel betreffen die Themenkomplexe \emph{Reine Durchleitung} (Artikel 12), \emph{Caching}(Artikel 13), \emph
+     {Hosting} (Artikel 14) und \emph{Keine allgemeine Überwachungspflicht} (Artikel 15).}%
+   Die vorliegende Verordnung lässt die Anwendung der Richtlinie 2000/31/EG und speziell die Vorschriften der
    Artikel 12 bis 15 dieser Richtlinie zur Verantwortlichkeit der Vermittler unberührt.%
   \label{itm:02-4}
 
 \end{enumerate}
+\end{commentblock}
 
-\addsec{Eigene Notizen}
-
-\begin{itemize}
-
-  \item Der Verweis auf Titel V Kapitel 2 EUV \cite{euv} in \hyperref[itm:02-2a]{Absatz 2a} bezieht sich auf die
-   gemeinsame Außen- und Sicherheitspolitik der EU"=Mitgliedsstaaten.
-
-  \item Die Verordnung (EG) Nr. 45/2001 \cite{vo-ds-fdv} in \hyperref[itm:02-3]{Absatz 3} hat den Schutz natürlicher
-   Personen bei der Verarbeitung personenbezogener Daten durch die Organe und Einrichtungen der Gemeinschaft und den
-   freien Datenverkehr zum Inhalt.
-
-  \item Die in \hyperref[itm:02-4]{Absatz 4} referenzierte Richtlinie 2000/31/EG \cite{ril-egv} regelt bestimmte
-   rechtliche Aspekte der Dienste der Informationsgesellschaft, insbesondere des elektronischen Geschäftsverkehrs, im
-   Binnenmarkt. Die referenzierten Artikel betreffen die Themenkomplexe
-
-   \begin{itemize}
-     \item Reine Durchleitung (Artikel 12)
-     \item Caching (Artikel 13)
-     \item Hosting (Artikel 14)
-     \item Keine allgemeine Überwachungspflicht (Artikel 15)
-   \end{itemize}
-
-\end{itemize}
+% \addsec{Ergänzende Hinweise}
