--- a/artikel/04.tex
+++ b/artikel/04.tex
@@ -2,8 +2,6 @@
 \chapter{Begriffsbestimmungen}
 \label{ch:4}
 
-\addsec{Text der Verordnung}
-
 Im Sinne dieser Verordnung bezeichnet der Ausdruck:
 
 \begin{enumerate}
@@ -86,6 +84,8 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
    unrechtmäßig, zur Vernichtung, zum Verlust, zur Veränderung, oder zur unbefugten Offenlegung von beziehungsweise zum
    unbefugten Zugang zu \hyperref[itm:04-1]{personenbezogenen Daten} führt, die übermittelt, gespeichert oder auf
    sonstige Weise verarbeitet wurden;%
+   \todo{klären: Liegt eine Verletzung des Schutzes nur dann vor, wenn ein
+   tatsächlicher Vorfall eingetroffen ist?}
   \label{itm:04-12}
 
   \item „genetische Daten“ \hyperref[itm:04-1]{personenbezogene Daten} zu den ererbten oder erworbenen genetischen
@@ -98,6 +98,8 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
    zu den physischen, physiologischen oder verhaltenstypischen Merkmalen einer natürlichen Person, die die eindeutige
    Identifizierung dieser natürlichen Person ermöglichen oder bestätigen, wie Gesichtsbilder oder daktyloskopische
    Daten;%
+   \todo{klären: Fallen schon die reinen Gesichtsbilder darunter oder müssen es biometrisch
+   aufgeschlüsselte Daten sein?}
   \label{itm:04-14}
 
   \item „Gesundheitsdaten“ \hyperref[itm:04-1]{personenbezogene Daten}, die sich auf die körperliche oder geistige
@@ -208,10 +210,25 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
     Grundfreiheiten der \hyperref[itm:04-1]{betroffenen Personen} und gegebenenfalls den freien Verkehr \hyperref
     [itm:04-1]{personenbezogener Daten} in der Union ausgehen;%
   \label{itm:04-24}
- 
-  \item „Dienst der Informationsgesellschaft“ eine Dienstleistung im Sinne des Artikels 1 Nummer 1 Buchstabe b der
+\end{enumerate}
+
+\begin{commentblock}
+\begin{enumerate}[start=25]
+  \item 
+    \comment{Die Richtlinie (EU) 2015/1535 \cite{ril-iv-tv} hat ein Informationsverfahren auf dem Gebiet der technischen
+     Vorschriften und der Vorschriften für die Dienste der Informationsgesellschaft zum Gegenstand. Die referenzierte
+     Begriffsbestimmung für "`Dienstleistung"' lautet "`jede in der Regel gegen Entgelt elektronisch im Fernabsatz und
+     auf individuellen Abruf eines Empfängers erbrachte Dienstleistung"'. Anhang 1 der Richtlinie enthält eine
+     Beispielsammlung nicht unter die Richtlinie fallender Dienste.}%   
+  „Dienst der Informationsgesellschaft“ eine Dienstleistung im Sinne des Artikels 1 Nummer 1 Buchstabe b der
    Richtlinie (EU) 2015/1535 des Europäischen Parlaments und des Rates;%
   \label{itm:04-25}
+\end{enumerate}
+\end{commentblock}
+
+\synccomments
+
+\begin{enumerate}[start=26]
 
   \item „internationale Organisation“ eine völkerrechtliche Organisation und ihre nachgeordneten Stellen oder jede
    sonstige Einrichtung, die durch eine zwischen zwei oder mehr Ländern geschlossene Übereinkunft oder auf der
@@ -220,20 +237,4 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
-
-\begin{itemize}
-
-  \item zur Ziffer 12 -- klären: Liegt eine \hyperref[itm:04-12]{Verletzung des Schutzes} nur dann vor, wenn ein
-   tatsächlicher Vorfall eingetroffen ist?
-
-  \item zur Ziffer 14 -- klären: Fallen schon die reinen Gesichtsbilder darunter oder müssen es biometrisch
-   aufgeschlüsselte Daten sein?
-
-  \item Die in Ziffer 25 referenzierte Richtlinie (EU) 2015/1535 \cite{ril-iv-tv} hat ein Informationsverfahren auf dem
-   Gebiet der technischen Vorschriften und der Vorschriften für die Dienste der Informationsgesellschaft zum
-   Gegenstand. Die referenzierte Begriffsbestimmung für "`Dienstleistung"' lautet "`jede in der Regel gegen Entgelt
-   elektronisch im Fernabsatz und auf individuellen Abruf eines Empfängers erbrachte Dienstleistung"'. 
-   Anhang 1 der Richtlinie enthält eine Beispielsammlung nicht unter die Richtlinie fallender Dienste.
-
-\end{itemize}
+% \addsec{Ergänzende Hinweise}
