--- a/support/preamble.tex
+++ b/support/preamble.tex
@@ -106,6 +106,7 @@
 % Verzeichnisse, Glossar und Abkürzungsverzeichnis
 \usepackage{imakeidx}                  % Indexgenerierung + Eintrag in TOC
 \setcounter{tocdepth}{0} % only parts and chapters
+\RedeclareSectionCommands[tocnumwidth=6ex]{part,chapter}
 
 
 % ---------------------------------------------------------------------------------------------------------------------
