--- a/DSGVO-ExtendedVersion.tex
+++ b/DSGVO-ExtendedVersion.tex
@@ -1,9 +1,9 @@
 \input{support/preamble}
 
-\title{DSGVO -- Extended Version}
-\subtitle{Verordnung (EU) 2016/679 des Europäischen Parlaments und des Rates vom 27. April 2016 zum Schutz natürlicher
+\title{Verordnung (EU) 2016/679 des Europäischen Parlaments und des Rates vom 27. April 2016 zum Schutz natürlicher
  Personen bei der Verarbeitung personenbezogener Daten, zum freien Datenverkehr und zur Aufhebung der Richtlinie
  95/46/EG (Datenschutz-Grundverordnung)}
+\subtitle{Erweiterte und kommentierte Fassung}
 
 \begin{document}
 \frontmatter
