--- a/umfeld/vorwort.tex
+++ b/umfeld/vorwort.tex
@@ -30,3 +30,9 @@ Dieser Text dient lediglich zu Informationszwecken und hat keine Rechtswirkung. 
 für seinen Inhalt. Verbindliche Fassungen der betreffenden Rechtsakte einschließlich ihrer Präambeln sind nur die im
 Amtsblatt der Europäischen Union veröffentlichten und auf EUR-Lex verfügbaren Texte. Diese amtlichen Texte sind über
 die Links in diesem Dokument bzw. dessen Literaturverzeichnis unmittelbar zugänglich.
+
+Bearbeiter:
+
+\begin{itemize}
+  \item Volker Wegert -- \href{mailto:mail@volker-wegert.de}{mail@volker-wegert.de}
+\end{itemize}
