--- a/DSGVO-ExtendedVersion.bib
+++ b/DSGVO-ExtendedVersion.bib
@@ -71,3 +71,37 @@
   url          = {https://eur-lex.europa.eu/legal-content/DE/TXT/?uri=CELEX:32002L0058}
 }
 
+@misc { vo-akkred-2008,
+  shorthand    = {V-EG 765/2008},
+  title        = {Verordnung (EG) Nr. 765/2008 des Europäischen Parlaments und des Rates vom 9. Juli 2008 über die Vorschriften für die Akkreditierung und Marktüberwachung im Zusammenhang mit der Vermarktung von Produkten und zur Aufhebung der Verordnung (EWG) Nr. 339/93 des Rates},
+  date         = {2008-07-09},
+  howpublished = {ABl. L 218 vom 13.8.2008, S. 30–47},
+  url          = {https://eur-lex.europa.eu/legal-content/DE/TXT/?uri=CELEX%3A32008R0765}
+}
+
+@misc { vo-mu-kp-2019,
+  shorthand    = {V-EU 2019/1020},
+  title        = {Verordnung (EU) 2019/1020 des Europäischen Parlaments und des Rates vom 20. Juni 2019 über Marktüberwachung und die Konformität von Produkten sowie zur Änderung der Richtlinie 2004/42/EG und der Verordnungen (EG) Nr. 765/2008 und (EU) Nr. 305/2011},
+  date         = {2019-06-20},
+  howpublished = {ABl. L 169 vom 25.6.2019},
+  url          = {https://eur-lex.europa.eu/legal-content/DE/TXT/?uri=celex%3A32019R1020}
+}
+
+@misc { vo-akkred-kons,
+  shorthand    = {V-EG 765/2008 (kF)},
+  title        = {Konsolidierter Text: Verordnung (EG) Nr. 765/2008 des Europäischen Parlaments und des Rats vom 9. Juli 2008 über die Vorschriften für die Akkreditierung und zur Aufhebung der Verordnung (EWG) Nr. 339/93},
+  date         = {2021-07-16},
+  url          = {https://eur-lex.europa.eu/legal-content/DE/TXT/?uri=CELEX%3A02008R0765-20210716}
+}
+
+@misc { ril-ds-alt,
+  shorthand    = {Ril 95/46/EG (kF)},
+  title        = {Richtlinie 95/46/EG des Europäischen Parlaments und des Rates vom 24. Oktober 1995 zum Schutz natürlicher Personen bei der Verarbeitung personenbezogener Daten und zum freien Datenverkehr},
+  subtitle     = {geändert durch Verordnung 1882/2003; berichtigt mit ABl. L 040 vom 17.02.2017, S. 78},
+  date         = {2003-11-20},
+  url          = {https://eur-lex.europa.eu/legal-content/DE/AUTO/?uri=CELEX:01995L0046-20031120}
+}
+
+
+
+
