--- a/artikel/04.tex
+++ b/artikel/04.tex
@@ -210,25 +210,15 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
     Grundfreiheiten der \hyperref[itm:04-1]{betroffenen Personen} und gegebenenfalls den freien Verkehr \hyperref
     [itm:04-1]{personenbezogener Daten} in der Union ausgehen;%
   \label{itm:04-24}
-\end{enumerate}
 
-\begin{commentblock}
-\begin{enumerate}[start=25]
-  \item 
-    \comment{Die Richtlinie (EU) 2015/1535 \cite{ril-iv-tv} hat ein Informationsverfahren auf dem Gebiet der technischen
-     Vorschriften und der Vorschriften für die Dienste der Informationsgesellschaft zum Gegenstand. Die referenzierte
-     Begriffsbestimmung für "`Dienstleistung"' lautet "`jede in der Regel gegen Entgelt elektronisch im Fernabsatz und
-     auf individuellen Abruf eines Empfängers erbrachte Dienstleistung"'. Anhang 1 der Richtlinie enthält eine
-     Beispielsammlung nicht unter die Richtlinie fallender Dienste.}%   
-  „Dienst der Informationsgesellschaft“ eine Dienstleistung im Sinne des Artikels 1 Nummer 1 Buchstabe b der
-   Richtlinie (EU) 2015/1535 des Europäischen Parlaments und des Rates;%
+  \item „Dienst der Informationsgesellschaft“ eine Dienstleistung im Sinne des Artikels 1 Nummer 1 Buchstabe b der
+   Richtlinie (EU) 2015/1535\comment{Die Richtlinie (EU) 2015/1535 \cite{ril-iv-tv} hat ein Informationsverfahren auf
+   dem Gebiet der technischen Vorschriften und der Vorschriften für die Dienste der Informationsgesellschaft zum
+   Gegenstand. Die referenzierte Begriffsbestimmung für "`Dienstleistung"' lautet "`jede in der Regel gegen Entgelt
+   elektronisch im Fernabsatz und auf individuellen Abruf eines Empfängers erbrachte Dienstleistung"'. Anhang 1 der
+   Richtlinie enthält eine Beispielsammlung nicht unter die Richtlinie fallender Dienste.} des Europäischen Parlaments
+   und des Rates;%
   \label{itm:04-25}
-\end{enumerate}
-\end{commentblock}
-
-\synccomments
-
-\begin{enumerate}[start=26]
 
   \item „internationale Organisation“ eine völkerrechtliche Organisation und ihre nachgeordneten Stellen oder jede
    sonstige Einrichtung, die durch eine zwischen zwei oder mehr Ländern geschlossene Übereinkunft oder auf der
