--- a/artikel/43.tex
+++ b/artikel/43.tex
@@ -18,10 +18,13 @@
      {Aufsichtsbehörde};%
     \label{itm:43-1a}
 
-    \item der nationalen Akkreditierungsstelle, die gemäß der Verordnung (EG) Nr. 765/2008 des Europäischen Parlaments
-     und des Rate im Einklang mit EN-ISO/IEC 17065/2012 und mit den zusätzlichen von der gemäß Artikel \hyperref[ch:55]
-     {55} oder \hyperref[ch:56]{56} zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} festgelegten Anforderungen
-     benannt wurde.\todo{Verordnungen nachschlagen}%
+    \item der nationalen Akkreditierungsstelle, die gemäß der Verordnung (EG) Nr. 765/2008\comment{Die Verordnung \cite
+     {vo-akkred-2008} (geändert durch \cite{vo-mu-kp-2019}, konsolidierte Fassung unter \cite{vo-akkred-kons}) legt
+     generelle Prinzipien der Akkreditierung und gegenseitigen Anerkennung fest.} des Europäischen Parlaments und des
+     Rate im Einklang mit EN-ISO/IEC 17065/2012\comment{Die Norm EN-ISO/IEC 17065/2012 (nicht kostenfrei verfügbar)
+     legt Anforderungen an Stellen, die Produkte, Prozesse und Dienstleistungen zertifizieren fest.} und mit den
+     zusätzlichen von der gemäß Artikel \hyperref[ch:55]{55} oder \hyperref[ch:56]{56} zuständigen \hyperref[itm:04-21]
+     {Aufsichtsbehörde} festgelegten Anforderungen benannt wurde.%
     \label{itm:43-1b}
 
   \end{enumerate}
@@ -61,9 +64,9 @@
    {2} erfolgt anhand der Anforderungen, die von der gemäß Artikel \hyperref[ch:55]{55} oder \hyperref[ch:56]
    {56} zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} oder -- gemäß \hyperref[ch:63]{Artikel 63} -- von dem
    Ausschuss genehmigt wurden. Im Fall einer Akkreditierung nach \hyperref[itm:43-1b]{Absatz 1 Buchstabe b des
-   vorliegenden Artikels} ergänzen diese Anforderungen diejenigen, die in der Verordnung (EG) Nr. 765/2008\todo
-   {Verordnung nachschlagen} und in den technischen Vorschriften, in denen die Methoden und Verfahren der
-   Zertifizierungsstellen beschrieben werden, vorgesehen sind.%
+   vorliegenden Artikels} ergänzen diese Anforderungen diejenigen, die in der Verordnung (EG) Nr. 765/2008 und in den
+   technischen Vorschriften, in denen die Methoden und Verfahren der Zertifizierungsstellen beschrieben werden,
+   vorgesehen sind.%
   \label{itm:43-3}
 
   \item Die Zertifizierungsstellen nach \hyperref[itm:43-1]{Absatz 1} sind unbeschadet der Verantwortung, die der
