--- a/artikel/46.tex
+++ b/artikel/46.tex
@@ -72,12 +72,13 @@
   \label{itm:46-4}
 
   \item Von einem Mitgliedstaat oder einer \hyperref[itm:04-21]{Aufsichtsbehörde} auf der Grundlage von Artikel 26
-   Absatz 2 der Richtlinie 95/46/EG\todo{nachschlagen} erteilte Genehmigungen bleiben so lange gültig, bis sie
-   erforderlichenfalls von dieser
-   \hyperref[itm:04-21]{Aufsichtsbehörde} geändert, ersetzt oder aufgehoben werden. Von der Kommission auf der Grundlage
-    von Artikel 26 Absatz 4 der Richtlinie 95/46/EG erlassene Feststellungen bleiben so lange in Kraft, bis sie
-    erforderlichenfalls mit einem nach \hyperref[itm:46-2]{Absatz 2 des vorliegenden Artikels} erlassenen Beschluss der
-    Kommission geändert, ersetzt oder aufgehoben werden.%
+   Absatz 2 der Richtlinie 95/46/EG\comment{Richtlinie 95/46/EG \cite{ril-ds-alt} wird durch die DSGVO ersetzt
+   (vgl. \hyperref[ch:94]{Artikel 94}). Artikel 25 Absatz 2 regelt die Ermittlung der Angemessenheit des Schutzniveaus;
+   Absatz 4 sieht Maßnahmen gegen Drittländer ohne angemessenes Schutzniveau vor.} erteilte Genehmigungen bleiben so
+   lange gültig, bis sie erforderlichenfalls von dieser \hyperref[itm:04-21]{Aufsichtsbehörde} geändert, ersetzt oder
+   aufgehoben werden. Von der Kommission auf der Grundlage von Artikel 26 Absatz 4 der Richtlinie 95/46/EG erlassene
+   Feststellungen bleiben so lange in Kraft, bis sie erforderlichenfalls mit einem nach \hyperref[itm:46-2]{Absatz 2
+   des vorliegenden Artikels} erlassenen Beschluss der Kommission geändert, ersetzt oder aufgehoben werden.%
   \label{itm:46-5}
 
 \end{enumerate}
