--- a/artikel/21.tex
+++ b/artikel/21.tex
@@ -32,23 +32,12 @@
    werden; dieser Hinweis hat in einer verständlichen und von anderen Informationen getrennten Form zu erfolgen.%
   \label{itm:21-4}
 
-\end{enumerate}
-
-\begin{commentblock}
-\begin{enumerate}[start=5]
-
-  \item 
-     \comment{Die Richtlinie 2002/58/EG \cite{ril-ds-ek} regelt die Verarbeitung personenbezogener Daten und den Schutz
-      der Privatsphäre in der elektronischen Kommunikation.}%
-   Im Zusammenhang mit der Nutzung von \hyperref[itm:04-25]{Diensten der Informationsgesellschaft} kann
-   die \hyperref[itm:04-1]{betroffene Person} ungeachtet der Richtlinie 2002/58/EG ihr Widerspruchsrecht mittels
-   automatisierter Verfahren ausüben, bei denen technische Spezifikationen verwendet werden.%
+  \item Im Zusammenhang mit der Nutzung von \hyperref[itm:04-25]{Diensten der Informationsgesellschaft} kann
+   die \hyperref[itm:04-1]{betroffene Person} ungeachtet der Richtlinie 2002/58/EG\comment{Die Richtlinie
+   2002/58/EG \cite{ril-ds-ek} regelt die Verarbeitung personenbezogener Daten und den Schutz der Privatsphäre in der
+   elektronischen Kommunikation.} ihr Widerspruchsrecht mittels automatisierter Verfahren ausüben, bei denen technische
+   Spezifikationen verwendet werden.%
   \label{itm:21-5}
-
-\end{enumerate}
-\end{commentblock}
-
-\begin{enumerate}[start=6]
 
   \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, aus Gründen, die sich aus ihrer besonderen Situation
    ergeben, gegen die sie betreffende \hyperref[itm:04-2]{Verarbeitung} sie betreffender \hyperref[itm:04-1]
