--- a/artikel/45.tex
+++ b/artikel/45.tex
@@ -60,8 +60,10 @@
 
   \item Die Kommission überwacht fortlaufend die Entwicklungen in Drittländern und bei internationalen Organisationen,
    die die Wirkungsweise der nach \hyperref[itm:45-3]{Absatz 3 des vorliegenden Artikels} erlassenen Beschlüsse und der
-   nach Artikel 25 Absatz 6 der Richtlinie 95/46/EG\todo{nachschlagen} erlassenen Feststellungen beeinträchtigen
-   könnten.%
+   nach Artikel 25 Absatz 6 der Richtlinie 95/46/EG\comment{Richtlinie 95/46/EG \cite{ril-ds-alt} wird durch die DSGVO
+   ersetzt (vgl. \hyperref[ch:94]{Artikel 94}). Artikel 25 Absatz 6 der Richtlinie erlaubt der Kommission
+   festzustellen, dass ein Drittland aufgrund innerstaatlicher Rechtsvorschriften oder internationaler Verpflichten ein
+   angemessenes Schutzniveau bietet.} erlassenen Feststellungen beeinträchtigen könnten.%
   \label{itm:45-4}
 
   \item Die Kommission widerruft, ändert oder setzt die in \hyperref[itm:45-3]{Absatz 3 des vorliegenden Artikels}
@@ -95,10 +97,10 @@
    bzw. nicht mehr gewährleisten.   %
   \label{itm:45-8}
 
-  \item Von der Kommission auf der Grundlage von Artikel 25 Absatz 6 der Richtlinie 95/46/EG\todo
-   {nachschlagen} erlassene Feststellungen bleiben so lange in Kraft, bis sie durch einen nach dem Prüfverfahren gemäß
-   den Absätzen \hyperref[itm:45-3]{3} oder \hyperref[itm:45-5]{5} des vorliegenden Artikels erlassenen Beschluss der
-   Kommission geändert, ersetzt oder aufgehoben werden.%
+  \item Von der Kommission auf der Grundlage von Artikel 25 Absatz 6 der Richtlinie 95/46/EG erlassene Feststellungen
+   bleiben so lange in Kraft, bis sie durch einen nach dem Prüfverfahren gemäß den Absätzen \hyperref[itm:45-3]
+   {3} oder \hyperref[itm:45-5]{5} des vorliegenden Artikels erlassenen Beschluss der Kommission geändert, ersetzt oder
+   aufgehoben werden.%
   \label{itm:45-9}
 
 \end{enumerate}
