--- a/artikel/94.tex
+++ b/artikel/94.tex
@@ -4,17 +4,19 @@
 
 \begin{enumerate}
 
-  \item Die Richtlinie 95/46/EG wird mit Wirkung vom 25. Mai 2018 aufgehoben.\todo{Recherche}ﬂ%
+  \item Die Richtlinie 95/46/EG\comment{Die letzte Fassung der Richtlinie 95/46/EG befindet sich unter \cite
+   {ril-ds-alt}} wird mit Wirkung vom 25. Mai 2018 aufgehoben.%
   \label{itm:94-1}
 
   \item Verweise auf die aufgehobene Richtlinie gelten als Verweise auf die vorliegende Verordnung. Verweise auf die
-   durch Artikel 29 der Richtlinie 95/46/EG eingesetzte Gruppe für den Schutz von Personen bei der \hyperref[itm:04-2]
-   {Verarbeitung}
-   \hyperref[itm:04-1]{personenbezogener Daten} gelten als Verweise auf den kraft dieser Verordnung errichteten
-    Europäischen Datenschutzausschuss.%
+   durch Artikel 29 der Richtlinie 95/46/EG\comment{Artikel 29 hat eine sog. \emph{Datenschutzgruppe} etabliert.}
+   eingesetzte Gruppe für den Schutz von Personen bei der \hyperref[itm:04-2]{Verarbeitung}\hyperref[itm:04-1]
+   {personenbezogener Daten} gelten als Verweise auf den kraft dieser Verordnung errichteten Europäischen
+   Datenschutzausschuss.%
   \label{itm:94-2}
 
 \end{enumerate}
+
 
 % \addsec{Ergänzende Hinweise}
 
