externe Referenzen ergänzt

--- a/DSGVO-ExtendedVersion.bib
+++ b/DSGVO-ExtendedVersion.bib
@@ -102,6 +102,28 @@
   url          = {https://eur-lex.europa.eu/legal-content/DE/AUTO/?uri=CELEX:01995L0046-20031120}
 }
 
+@misc { adeq-list,
+  shorthand    = {AdDPL},
+  title        = {Adequacy Decisions},
+  subtitle     = {How the EU determines if a non-EU country has an adequate level of data protection.},
+  url          = {https://ec.europa.eu/info/law/law-topic/data-protection/international-dimension-data-protection/adequacy-decisions_en}
+}
+
+@misc { vo-dok-zugang,
+  shorthand    = {V-EG 1049/2001},
+  title        = {Verordnung (EG) Nr. 1049/2001 des Europäischen Parlaments und des Rates vom 30. Mai 2001 über den Zugang der Öffentlichkeit zu Dokumenten des Europäischen Parlaments, des Rates und der Kommission},
+  date         = {2001-05-30},
+  howpublished = {ABl. L 145 vom 31.5.2001, S. 43–48},
+  url          = {https://eur-lex.europa.eu/legal-content/DE/TXT/?uri=CELEX%3A32001R1049}
+}
+
+@misc { vo-kontr-komm,
+  shorthand    = {V-EU 182/2011},
+  title        = {Verordnung (EU) Nr. 182/2011 des Europäischen Parlaments und des Rates vom 16. Februar 2011 zur Festlegung der allgemeinen Regeln und Grundsätze, nach denen die Mitgliedstaaten die Wahrnehmung der Durchführungsbefugnisse durch die Kommission kontrollieren},
+  date         = {2011-02-16},
+  howpublished = {ABl. L 55 vom 28.2.2011, S. 13–18},
+  url          = {https://eur-lex.europa.eu/legal-content/DE/TXT/?uri=CELEX%3A32011R0182}
+}
 
 
 
