--- a/artikel/45.tex
+++ b/artikel/45.tex
@@ -91,10 +91,10 @@
     vorliegenden Artikels} nicht berührt.%
   \label{itm:45-7}
 
-  \item Die Kommission veröffentlicht im \emph{Amtsblatt der Europäischen Union} und auf ihrer Website eine Liste aller
-   Drittländer beziehungsweise Gebiete und spezifischen Sektoren in einem Drittland und aller internationalen
-   Organisationen, für die sie durch Beschluss festgestellt hat, dass sie ein angemessenes Schutzniveau gewährleisten
-   bzw. nicht mehr gewährleisten.   %
+  \item Die Kommission veröffentlicht im \emph{Amtsblatt der Europäischen Union} und auf ihrer Website\comment
+   {Diese Auflistung findet sich unter \cite{adeq-list}.} eine Liste aller Drittländer beziehungsweise Gebiete und
+   spezifischen Sektoren in einem Drittland und aller internationalen Organisationen, für die sie durch Beschluss
+   festgestellt hat, dass sie ein angemessenes Schutzniveau gewährleisten bzw. nicht mehr gewährleisten. %
   \label{itm:45-8}
 
   \item Von der Kommission auf der Grundlage von Artikel 25 Absatz 6 der Richtlinie 95/46/EG erlassene Feststellungen
@@ -106,6 +106,3 @@
 \end{enumerate}
 
 % \addsec{Ergänzende Hinweise}
-
-\todo{
-\url{https://ec.europa.eu/info/law/law-topic/data-protection/international-dimension-data-protection/adequacy-decisions_en} verlinken}
