--- a/artikel/97.tex
+++ b/artikel/97.tex
@@ -15,12 +15,12 @@
   \begin{enumerate}
   
     \item des \hyperref[part:5]{Kapitels V} über die Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an
-     Drittländer oder an
-     \hyperref[itm:04-26]{internationale Organisationen} insbesondere im Hinblick auf die gemäß \hyperref[itm:45-3]
-      {Artikel 45 Absatz 3} der vorliegenden Verordnung erlassenen Beschlüsse sowie die gemäß Artikel 25 Absatz 6 der
-      Richtlinie 95/46/EG
-     \todo{Recherche}
-     erlassenen Feststellungen,%
+     Drittländer oder an \hyperref[itm:04-26]{internationale Organisationen} insbesondere im Hinblick auf die
+     gemäß \hyperref[itm:45-3]{Artikel 45 Absatz 3} der vorliegenden Verordnung erlassenen Beschlüsse sowie die gemäß
+     Artikel 25 Absatz 6 der Richtlinie 95/46/EG\comment{Richtlinie 95/46/EG \cite{ril-ds-alt} wird durch die DSGVO
+     ersetzt (vgl. \hyperref[ch:94]{Artikel 94}). Artikel 25 Absatz 6 der Richtlinie erlaubt der Kommission
+     festzustellen, dass ein Drittland aufgrund innerstaatlicher Rechtsvorschriften oder internationaler Verpflichten
+     ein angemessenes Schutzniveau bietet.} erlassenen Feststellungen,%
     \label{itm:97-2a}
 
     \item des \hyperref[part:7]{Kapitels VII} über Zusammenarbeit und Kohärenz.%
