--- a/artikel/93.tex
+++ b/artikel/93.tex
@@ -5,14 +5,17 @@
 \begin{enumerate}
 
   \item Die Kommission wird von einem Ausschuss unterstützt. Dieser Ausschuss ist ein Ausschuss im Sinne der Verordnung
-   (EU) Nr. 182/2011.\todo{recherchieren}%
+   (EU) Nr. 182/2011.\comment{Die Verordnung(EU) Nr. 182/2011 \cite{vo-kontr-komm} legt allgemeinen Regeln und
+   Grundsätze fest, nach denen die Mitgliedstaaten die Wahrnehmung der Durchführungsbefugnisse durch die Kommission
+   kontrollieren.}%
   \label{itm:93-1}
 
-  \item Wird auf diesen Absatz Bezug genommen, so gilt Artikel 5 der Verordnung (EU) Nr. 182/2011.%
+  \item Wird auf diesen Absatz Bezug genommen, so gilt Artikel 5\comment{Artikel 5 der Verordnung beschreibt das
+   Prüfverfahren.} der Verordnung (EU) Nr. 182/2011.%
   \label{itm:93-2}
 
-  \item Wird auf diesen Absatz Bezug genommen, so gilt Artikel 8 der Verordnung (EU) Nr. 182/2011 in Verbindung mit
-   deren Artikel 5.%
+  \item Wird auf diesen Absatz Bezug genommen, so gilt Artikel 8\comment{Artikel 8 beschreibt sofort geltende
+   Durchführungsrechtsakte} der Verordnung (EU) Nr. 182/2011 in Verbindung mit deren Artikel 5.%
   \label{itm:93-3}
 
 \end{enumerate}   
