--- a/artikel/95.tex
+++ b/artikel/95.tex
@@ -5,7 +5,9 @@
 Diese Verordnung erlegt natürlichen oder juristischen Personen in Bezug auf die \hyperref[itm:04-2]{Verarbeitung} in
 Verbindung mit der Bereitstellung öffentlich zugänglicher elektronischer Kommunikationsdienste in öffentlichen
 Kommunikationsnetzen in der Union keine zusätzlichen Pflichten auf, soweit sie besonderen in der Richtlinie
-2002/58/EG\todo{Recherche} festgelegten Pflichten unterliegen, die dasselbe Ziel verfolgen.
+2002/58/EG\comment{Die Richtlinie 2002/58/EG \cite{ril-ds-ek} regelt die Verarbeitung personenbezogener Daten und den
+Schutz der Privatsphäre in der elektronischen Kommunikation.} festgelegten Pflichten unterliegen, die dasselbe Ziel
+verfolgen.
 
 % \addsec{Ergänzende Hinweise}
 
