--- a/artikel/04.tex
+++ b/artikel/04.tex
@@ -9,7 +9,7 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
   \item „personenbezogene Daten“ alle Informationen, die sich auf eine identifizierte oder identifizierbare natürliche
    Person (im Folgenden „betroffene Person“) beziehen; als identifizierbar wird eine natürliche Person angesehen, die
    direkt oder indirekt, insbesondere mittels Zuordnung zu einer Kennung wie einem Namen, zu einer Kennnummer, zu
-   Standortdaten, zu einer Online-Kennung oder zu einem oder mehreren besonderen Merkmalen, die Ausdruck der
+   Standortdaten, zu einer Online"=Kennung oder zu einem oder mehreren besonderen Merkmalen, die Ausdruck der
    physischen, physiologischen, genetischen, psychischen, wirtschaftlichen, kulturellen oder sozialen Identität dieser
    natürlichen Person sind, identifiziert werden kann;%
   \label{itm:04-1}
