--- a/artikel/35.tex
+++ b/artikel/35.tex
@@ -12,11 +12,11 @@
    hohen Risiken kann eine einzige Abschätzung vorgenommen werden.%
   \label{itm:35-1}
 
-  \item Der \hyperref[itm:04-7]{Verantwortliche} holt bei der Durchführung einer Datenschutz-Folgenabschätzung den Rat
+  \item Der \hyperref[itm:04-7]{Verantwortliche} holt bei der Durchführung einer Datenschutz"=Folgenabschätzung den Rat
    des Datenschutzbeauftragten, sofern ein solcher benannt wurde, ein.%
   \label{itm:35-2}
 
-  \item Eine Datenschutz-Folgenabschätzung gemäß \hyperref[itm:35-1]{Absatz 1} ist insbesondere in folgenden Fällen
+  \item Eine Datenschutz"=Folgenabschätzung gemäß \hyperref[itm:35-1]{Absatz 1} ist insbesondere in folgenden Fällen
    erforderlich:%
   \label{itm:35-3}
 
@@ -40,13 +40,13 @@
   \end{enumerate}
 
   \item Die \hyperref[itm:04-21]{Aufsichtsbehörde} erstellt eine Liste der Verarbeitungsvorgänge, für die
-   gemäß \hyperref[itm:35-1]{Absatz 1} eine Datenschutz-Folgenabschätzung durchzuführen ist, und veröffentlicht diese.
+   gemäß \hyperref[itm:35-1]{Absatz 1} eine Datenschutz"=Folgenabschätzung durchzuführen ist, und veröffentlicht diese.
    Die \hyperref[itm:04-21]{Aufsichtsbehörde} übermittelt diese Listen dem in \hyperref[ch:68]{Artikel 68} genannten
    Ausschuss.%
   \label{itm:35-4}
 
   \item Die \hyperref[itm:04-21]{Aufsichtsbehörde} kann des Weiteren eine Liste der Arten von Verarbeitungsvorgängen
-   erstellen und veröffentlichen, für die keine Datenschutz-Folgenabschätzung erforderlich ist. Die \hyperref
+   erstellen und veröffentlichen, für die keine Datenschutz"=Folgenabschätzung erforderlich ist. Die \hyperref
    [itm:04-21]{Aufsichtsbehörde} übermittelt diese Listen dem Ausschuss.%
   \label{itm:35-5}
 
@@ -86,7 +86,7 @@
   \item Die Einhaltung genehmigter Verhaltensregeln gemäß \hyperref[ch:40]{Artikel 40} durch die zuständigen
    \hyperref[itm:04-7]{Verantwortlichen} oder die zuständigen \hyperref[itm:04-8]{Auftragsverarbeiter} ist bei der
     Beurteilung der Auswirkungen der von diesen durchgeführten Verarbeitungsvorgänge, insbesondere für die Zwecke einer
-    Datenschutz-Folgenabschätzung, gebührend zu berücksichtigen.%
+    Datenschutz"=Folgenabschätzung, gebührend zu berücksichtigen.%
   \label{itm:35-8}
 
   \item Der \hyperref[itm:04-7]{Verantwortliche} holt gegebenenfalls den Standpunkt der \hyperref[itm:04-1]
@@ -100,14 +100,14 @@
    Mitgliedstaats, dem der
    \hyperref[itm:04-7]{Verantwortliche} unterliegt, beruht und falls diese Rechtsvorschriften den konkreten
     Verarbeitungsvorgang oder die konkreten Verarbeitungsvorgänge regeln und bereits im Rahmen der allgemeinen
-    Folgenabschätzung im Zusammenhang mit dem Erlass dieser Rechtsgrundlage eine Datenschutz-Folgenabschätzung
+    Folgenabschätzung im Zusammenhang mit dem Erlass dieser Rechtsgrundlage eine Datenschutz"=Folgenabschätzung
     erfolgte, gelten die Absätze \hyperref[itm:35-1]{1} bis \hyperref[itm:35-7]{7} nur, wenn es nach dem Ermessen der
     Mitgliedstaaten erforderlich ist, vor den betreffenden Verarbeitungstätigkeiten eine solche Folgenabschätzung
     durchzuführen.%
   \label{itm:35-10}
 
   \item Erforderlichenfalls führt der \hyperref[itm:04-7]{Verantwortliche} eine Überprüfung durch, um zu bewerten, ob
-   die \hyperref[itm:04-2]{Verarbeitung} gemäß der Datenschutz-Folgenabschätzung durchgeführt wird; dies gilt
+   die \hyperref[itm:04-2]{Verarbeitung} gemäß der Datenschutz"=Folgenabschätzung durchgeführt wird; dies gilt
    zumindest, wenn hinsichtlich des mit den Verarbeitungsvorgängen verbundenen Risikos Änderungen eingetreten sind.%
   \label{itm:35-11}
 
