--- a/artikel/36.tex
+++ b/artikel/36.tex
@@ -5,7 +5,7 @@
 \begin{enumerate}
 
   \item Der \hyperref[itm:04-7]{Verantwortliche} konsultiert vor der \hyperref[itm:04-2]{Verarbeitung} die \hyperref
-   [itm:04-21]{Aufsichtsbehörde}, wenn aus einer Datenschutz-Folgenabschätzung gemäß \hyperref[ch:35]{Artikel 35}
+   [itm:04-21]{Aufsichtsbehörde}, wenn aus einer Datenschutz"=Folgenabschätzung gemäß \hyperref[ch:35]{Artikel 35}
    hervorgeht, dass die \hyperref[itm:04-2]{Verarbeitung} ein hohes Risiko zur Folge hätte, sofern der \hyperref
    [itm:04-7]{Verantwortliche} keine Maßnahmen zur Eindämmung des Risikos trifft.%
   \label{itm:36-1}
@@ -47,7 +47,7 @@
     \item gegebenenfalls die Kontaktdaten des Datenschutzbeauftragten;%
     \label{itm:36-3d}
 
-    \item die Datenschutz-Folgenabschätzung gemäß \hyperref[ch:35]{Artikel 35} und%
+    \item die Datenschutz"=Folgenabschätzung gemäß \hyperref[ch:35]{Artikel 35} und%
     \label{itm:36-3e}
 
     \item alle sonstigen von der \hyperref[itm:04-21]{Aufsichtsbehörde} angeforderten Informationen.%
