--- a/artikel/39.tex
+++ b/artikel/39.tex
@@ -22,7 +22,7 @@
       und Schulung der an den Verarbeitungsvorgängen beteiligten Mitarbeiter und der diesbezüglichen Überprüfungen;%
     \label{itm:39-1b}
 
-    \item Beratung -- auf Anfrage -- im Zusammenhang mit der Datenschutz-Folgenabschätzung und Überwachung ihrer
+    \item Beratung -- auf Anfrage -- im Zusammenhang mit der Datenschutz"=Folgenabschätzung und Überwachung ihrer
      Durchführung gemäß \hyperref[ch:35]{Artikel 35};%
     \label{itm:39-1c}
 
