--- a/artikel/57.tex
+++ b/artikel/57.tex
@@ -58,7 +58,7 @@
     \label{itm:57-1j}
 
     \item eine Liste der Verarbeitungsarten erstellen und führen, für die gemäß \hyperref[itm:35-4]{Artikel 35 Absatz 4}
-     eine Datenschutz-Folgenabschätzung durchzuführen ist;%
+     eine Datenschutz"=Folgenabschätzung durchzuführen ist;%
     \label{itm:57-1k}
 
     \item Beratung in Bezug auf die in \hyperref[itm:36-1]{Artikel 36 Absatz 2} genannten Verarbeitungsvorgänge
