--- a/artikel/64.tex
+++ b/artikel/64.tex
@@ -12,7 +12,7 @@
   \begin{enumerate}
   
     \item der Annahme einer Liste der Verarbeitungsvorgänge dient, die der Anforderung einer
-     Datenschutz-Folgenabschätzung gemäß \hyperref[itm:35-4]{Artikel 35 Absatz 4} unterliegen,%
+     Datenschutz"=Folgenabschätzung gemäß \hyperref[itm:35-4]{Artikel 35 Absatz 4} unterliegen,%
     \label{itm:64-1a}
 
     \item eine Angelegenheit gemäß \hyperref[itm:40-7]{Artikel 40 Absatz 7} und damit die Frage betrifft, ob ein Entwurf
@@ -25,7 +25,7 @@
      Zertifizierung gemäß \hyperref[itm:42-5]{Artikel 42 Absatz 5} dient,%
     \label{itm:64-1c}
 
-    \item der Festlegung von Standard-Datenschutzklauseln gemäß \hyperref[itm:46-2d]{Artikel 46 Absatz 2 Buchstabe d}
+    \item der Festlegung von Standard"=Datenschutzklauseln gemäß \hyperref[itm:46-2d]{Artikel 46 Absatz 2 Buchstabe d}
      und \hyperref[itm:28-8]{Artikel 28 Absatz 8} dient,%
     \label{itm:64-1d}
 
